Fixed alignment of dark mode button

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -149,6 +149,10 @@ pre {
         margin-right: 0;
     }
 
+    .dark-mode-buttons {
+        transform: translateY(3px);
+    }
+
 }
 
 .title {
